xenedu-lindomus (2.0.0~4) stable; urgency=medium

  * Update for Jessie
  * Make new xenedu-new-debian script
  * Fix xenedu-new-lcs for Jessie

 -- jlcf <jean-luc.chretien@ac-caen.f>  Fri, 13 Oct 2017 12:58:00 +0200

xenedu-lindomus (0.9.1) stable; urgency=low

  * update xenedu-new-wheezy (Testing)
  * update xenedu-new-wheezy.pl (Testing)
		**correction: Possibilité de créer plusieurs VM en implementant le hostname au LV/Problèmes inittab et "extra" du fichier .cfg réglés.
  * update xenedu-migre-se3 (Testing)
  * add xenedu-new-wheezy (unstable)
  * add xenedu-new-wheezy.pl (unstable)
  
  [Simon Cavey]
  * XenEdu adaptation for Debian Wheezy
  * update new-se3
		
 -- Mikael Bailleul <MikaelBailleul@gmail.com>
 -- David Gloux <david.gloux@tice.ac-caen.fr>  Wed, 23 Apr 2014 11:50:00 +0100

xenedu-lindomus (0.8.0.16) stable; urgency=low

  * set lenny to archive

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Thu, 14 Jun 2012 15:26:20 +0200

xenedu-lindomus (0.8.0.13) stable; urgency=low

  * change lcs memory to 1024

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Wed, 15 Feb 2012 13:52:29 +0100

xenedu-lindomus (0.8.0.12) stable; urgency=low

  * new version for xenedu-new-lcs

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Wed, 15 Feb 2012 09:26:02 +0100

xenedu-lindomus (0.8.0.11) stable; urgency=low

  * add mirgation resync tools

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Fri, 27 Jan 2012 16:42:47 +0100

xenedu-lindomus (0.8.0.7) stable; urgency=low

  * fix lcs squeeze migration

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Fri, 27 Jan 2012 15:48:58 +0100

xenedu-lindomus (0.8.0.6) stable; urgency=low

  * migre-lcs : minors fix

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Thu, 26 Jan 2012 15:01:59 +0100

xenedu-lindomus (0.8.0.5) stable; urgency=low

  * upgrade migration scripts

 -- Simon Cavey <simon.cavey@crdp.ac-caen.fr>  Fri, 13 Jan 2012 11:49:32 +0100

xenedu-lindomus (0.8.0.3) stable; urgency=low

  * lcs se3 migrations fix
