@@ -1,0 +1,33 @@
+[root]
+size=5G
+type=ext4
+mountpoint=/
+options=sync,errors=remount-ro
+
+[swap]
+size=512M
+type=swap
+
+[tmp]
+size=0.5G
+type=ext4
+mountpoint=/tmp
+options=nodev,nosuid
+
+[var]
+size=10G
+type=ext4
+mountpoint=/var
+options=nodev,nosuid
+
+[varse3]
+size=@@VARSE3SIZE@@G
+type=xfs
+mountpoint=/var/se3
+options=options=sync,errors=remount-ro
+
+[home]
+size=@@HOMESE3SIZE@@G
+type=xfs
+mountpoint=/home
+options=nodev,nosuid
